[package]
name = "cipher-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
phf = { version = "0.13.1", features = ["macros"] }
itertools = "0.14.0"
eta = "0.2.2"
num_cpus = "1.17.0"
fastrand = "2.3.0"
rayon = "1.10"


[profile.release]
codegen-units = 1
lto = 'fat'
panic = 'abort'
strip = true

[profile.fast-dev]
inherits = "dev"
codegen-units = 256
lto = 'thin'
opt-level = 2
